<resources>
    <string name="app_name">Lukingbek!</string>
    <string name="moment_name">Moment/Tempat</string>
    <string name="detail">Detail</string>
    <string name="date">09/09/2000</string>
    <string name="nama">Konser Gita Cinta</string>
    <string name="tanggal">09/09/2000</string>
    <string name="story">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dapibus ultrices in iaculis nunc sed augue lacus. Quam nulla porttitor massa id neque aliquam. Ultrices mi tempus imperdiet nulla malesuada. Eros in cursus turpis massa tincidunt dui ut ornare lectus. Egestas sed sed risus pretium. Lorem dolor sed viverra ipsum. Gravida rutrum quisque non tellus. Rutrum tellus pellentesque eu tincidunt tortor. Sed blandit libero volutpat sed cras ornare. Et netus et malesuada fames ac. Ultrices eros in cursus turpis massa tincidunt dui ut ornare. Lacus sed viverra tellus in. Sollicitudin ac orci phasellus egestas. Purus in mollis nunc sed. Sollicitudin ac orci phasellus egestas tellus rutrum tellus pellentesque. Interdum consectetur libero id faucibus nisl tincidunt eget.            "</string>
    <string name="source">https://eksotisjogja.com</string>
    <string name="sumber">"Sumber: "</string>
    <string name="action_about">about_action</string>
</resources>