<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_photo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        tools:src="@android:color/darker_gray"/>


    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="@string/moment_name"
        android:layout_toEndOf="@id/img_item_photo"/>

    <TextView
        android:id="@+id/tv_item_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_item_name"
        android:ellipsize="end"
        android:maxLines="2"
        tools:text="@string/detail"
        android:layout_toEndOf="@id/img_item_photo"/>

    <TextView
        android:id="@+id/tv_item_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@id/tv_item_name"
        android:textAlignment="textEnd"
        android:textSize="12sp"
        android:textStyle="italic"
        tools:text="@string/date" />

</RelativeLayout>