<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_detail"
    android:background="@android:color/white">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:id="@+id/detail_image"
            android:src="@drawable/gitcin_tiara"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:text="@string/nama"
            android:id="@+id/detail_moment"
            android:fontFamily="@font/galyon_regular"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tanggal"
            android:textSize="13sp"
            android:id="@+id/detail_date"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/story"
            android:id="@+id/detail_detail"
            android:fontFamily="@font/sourcesanspro_reguler"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:textColor="@android:color/black"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sumber"
                    android:fontFamily="@font/sourcesanspro_reguler" />

                <TextView
                    android:id="@+id/detail_source"
                    android:layout_width="324dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:fontFamily="@font/sourcesanspro_reguler"
                    android:text="@string/source"
                    android:textColor="@android:color/black"
                    android:textStyle="italic" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>